Fix compilation errors, add H2 database, create Thymeleaf fragments, install JDK 21